style.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
}


.container {
    display: flex;
    flex-direction: column;
}

a {
    text-decoration: none;
    color: #e5e7eb;
}

ul {
    list-style: none;
    display: flex;
    gap: 16px;
}

header {
    background-color: #1f2937;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-shrink: 0;
}

header .header-logo {
    color: #f9faf8;
    font-size: 24px;
}

header .header-items {
    display: flex;
    flex-basis: 100%;
    justify-content: space-between;
    align-items: center;
    margin: 0 300px;
}

.hero {
    background-color: #1f2937;
    display: flex;
    padding: 20px;
}

.hero .hero-items {
    display: flex;
    justify-content: space-between;
    margin: 0 300px;
}

.hero .hero-text {
    flex-basis: 450px;
    
}

.hero button {
    background-color: #3B82F6;
}

.hero h1 {
    color: #f9faf8;
    font-size: 48px;
    margin: 0;
    padding: 0;
}

.hero p {
    color: #e5e7eb;
    font-size: 18px;
    margin: 0;
    padding: 0;
}

.hero-image {
    display: flex;
    justify-content: end;
}

.car-photo {
    height: 300px;
    flex: 1;

}



.box1,
.box2,
.box3,
.box4,
.box5 {
    border: 8px solid lightcyan;
}

